Fixed overflow on strategy guides

--- a/css/general.css
+++ b/css/general.css
@@ -74,5 +74,9 @@
   font-size: 16px;
 }
 
+.fixed-height {
+  height: 200px;
+}
+
 /* STYLES USED IN GALLERY(ES) */
 
